--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,10 @@
 project:
   type: website
+  output-dir: docs   # ✅ ADD THIS LINE
 
 website:
   description: "A blog built with Quarto"
-  site-url: https://your-website-url.example.com # you must change this appropriately for RSS feeds to work properly
+  site-url: https://richeder7.github.io/dat303-blog/   # <-- also fix site-url
   title: "dat303-blog"
   navbar:
     right:
@@ -12,12 +13,11 @@ website:
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
+
 format:
   html:
     theme:
       - cosmo
       - brand
     css: styles.css
-
-
 
