--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,17 +1,20 @@
-project:
+\project:
   type: website
+  output-dir: docs   # 👈 VERY IMPORTANT: GitHub Pages will serve from /docs
 
 website:
   title: "dat303-blog"
-  description: "A blog built with Quarto"
-  site-url: https://richeder7.github.io/dat303-blog
+  description: "A blog built with Quarto for DAT303"
+  site-url: "https://richeder7.github.io/dat303-blog"   # 👈 your Pages URL
+
   navbar:
     right:
-      - about.qmd
+      - href: index.qmd
+        text: Home
+      - href: about.qmd
+        text: About
       - icon: github
-        href: https://github.com/Richeder7
-      - icon: twitter
-        href: https://twitter.com
+        href: "https://github.com/Richeder7/dat303-blog"
 
 format:
   html:
